# 341a-lab-manual

./: .buildinfo  LICENSE  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  natural-convection-dataanalysis.html  natural-convection.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: intro.md  natural-convection-dataanalysis.ipynb
labmanual/: _config.yml  _toc.yml  natural-convection-dataanalysis.ipynb  natural-convection.md  requirements.txt
labmanual/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  natural-convection-dataanalysis.doctree  natural-convection.doctree  notebooks.doctree
labmanual/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  natural-convection-dataanalysis.html  natural-convection.html  objects.inv  search.html  searchindex.js
labmanual/_build/html/_sources/: natural-convection-dataanalysis.ipynb
labmanual/_build/jupyter_execute/: markdown-notebooks.ipynb  natural-convection-dataanalysis.ipynb  notebooks.ipynb
labmanual/data/: nat-conv-T.csv
